--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 BASE_URL=https://big-brain.co.in/api
-TOKEN='1|ETi4KBiWGgFICK7LVmvMp2jTgc1x68ohU7l9VONLcfedf8da'
+TOKEN='1|yCnrh7k96OiRe1IN38i8grI3PPeYBSXq2n12JmxF59b2aad5'
+
+PUSHER_KEY='79368817dcadd9c47468'
+PUSHER_CLUSTER='ap2'
