--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "react-native": "0.74.5",
     "react-native-alert-notification": "^0.4.0",
     "react-native-dotenv": "^3.4.11",
+    "react-native-event-listeners": "^1.0.7",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "^1.14.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
