--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/netinfo": "^11.4.1",
-    "@react-native-picker/picker": "^2.8.0",
+    "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
@@ -36,8 +36,10 @@
     "pusher-js": "^8.4.0-rc2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-native": "0.74.5",
     "react-native-alert-notification": "^0.4.0",
+    "react-native-config": "^1.5.3",
     "react-native-dotenv": "^3.4.11",
     "react-native-event-listeners": "^1.0.7",
     "react-native-gesture-handler": "~2.16.1",
@@ -48,6 +50,7 @@
     "react-native-screens": "3.31.1",
     "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.19.10",
+    "react-native-webview": "^13.6.4",
     "socket.io-client": "^4.8.0"
   },
   "devDependencies": {
