--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-font": "~12.0.9",
     "expo-image-picker": "^15.0.7",
     "expo-linking": "~6.3.1",
+    "expo-location": "^17.0.1",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
@@ -42,7 +43,10 @@
     "react-native-config": "^1.5.3",
     "react-native-dotenv": "^3.4.11",
     "react-native-event-listeners": "^1.0.7",
+    "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "^1.14.0",
     "react-native-reanimated": "~3.10.1",
